--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,37 @@
-.title{
-    color: blue;
-    background-color: brown;
-  }
-  #h3style{
-    color: blanchedalmond;
-  }
+#headerDiv{
+  background-color: rgb(153, 146, 160);
+  height: 100px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+#headerDiv img{
+  height: 100px;
+  width: 100px;
+  float: left;
+
+}
+#headerDiv h1{
+  color: #000;
+  font-size: 50px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-left: 100px;
+  margin-top: 20px;
+  margin-right: 200px;
+  float: left;
+
+}
+
+#headerDiv a{
+  color: #898181;
+  font-size: 15px;
+  margin-left: 15px;
+  margin-top: 40px;
+  float: left;
+  text-decoration: none;
+  background-color: #000;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
