--- a/css/HeaderAndFooter.css
+++ b/css/HeaderAndFooter.css
@@ -16,8 +16,8 @@
   #headerDiv h1{
     color: #000;
     font-size: 50px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-left: 200px;
+    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    margin-left: 100px;
     margin-top: 20px;
     /* margin-right: 200px; */
     float: left;
@@ -38,7 +38,7 @@
     
   }
   #linkDiv{
-    margin-right: 5%;
+    margin-right: 4%;
     margin-top: 40px;
     float: right;
   }
@@ -59,53 +59,40 @@
     margin-top: 10px;
     text-align: center;
   }
-
-  @media only screen and (max-width: 1020px) {
-    body {
-      background-color: rgb(226, 23, 162);
-    }
-    #headerDiv h1{
-     font-size: 40px;
-     margin-left: 30px;
-    }
-    #headerDiv a{
-      margin-left: 20px;
-      margin-top: 4%;
-    }
-}
-@media only screen and (max-width: 680px) {
-    body {
-      background-color: lightblue;
-    }
-    #headerDiv{
-      padding: 10px;
-    }
-}
-@media only screen and (max-width: 480px) {
- 
-    /* #headerDiv h1{
-      width: 100%;
-      color: #000;
-      font-size: 36px;
-      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-      margin-left: 120px;
-      margin-top: 20px;
-      margin-right: 200px;
-      float:initial;
-    
-    } */
-    
-     /* #checkbox{
-      font-size: 30px;
-      color: #000;
-      float: right;
-      line-height: 80px;
-      margin-right: 40px;
-      cursor: pointer;
-     } */
-   
+  #linkDiv a:hover{
+    background-color: aliceblue;
+    color: #000;
   }
-
+/* tablet view */
+@media only screen and (max-width:1024px){
+  #headerDiv h1{
+    font-size: 36px;
+    margin-left: 30px;
+    margin-top: 30px ;
+  }
+  #linkDiv a{
+     margin-left: 10px;
+     margin-top: 4% ;
+  }
+}
+/* mobile view */
+@media only screen and (max-width:600px){
+  #linkDiv{
+    margin-top: 10px;
+    background-color: rgb(153, 146, 160); 
+    padding: 5px;
+  }
+  #linkDiv a{
+    display:block;
+    background-color: rgb(153, 146, 160);
+    border: 0px;
+    color: #000;
+    text-align: center;
+  }
+  #headerDiv h1{
+    font-size: 30px;
+  }
+}
 
 
   
