--- a/css/index.css
+++ b/css/index.css
@@ -10,10 +10,12 @@
     /* height: 450px; */
     grid-gap: 10px;
     float:right;
+    padding-bottom: 18px;
 }
 
 .gridImg {
     width: 100px;
+    height: 100px;
     padding: 20px 50px 20px;
     margin-left: 92px;
     float: left;
@@ -35,47 +37,50 @@
     color: #000;
 }
 
-@media only screen and (max-width:1024px){
+@media only screen and (max-width:1000px){
 
    body{
     background-color: black;
    }
    .gridDiv {
     display: grid;
-    grid-template-columns: auto auto auto;
-    margin-left: 100px;
-    margin-right: 3px;
+    grid-template-columns: 200px 200px 200px;
+    margin-right: 56px;
     margin-top: 130px;
     margin-bottom: 100px;
     background-color: rgb(104, 104, 125);
-    width: 100%;
-    height: 450px;
+    width: 86%;
+    height: 413px;
     grid-gap: 10px;
     float: right;
   }
-}
-.gridImg {
-    width: 44%;
-    height: 35%;
+
+  .gridImg {
+    width: 100px;
+    height: 100px;
     padding: 20px 50px 20px;
     margin-left: 15px;
     float: left;
-}
-.gridP{
+  }
+  .gridP {
     text-align: center;
-    margin-left: 85px;
+    margin-left: 8px;
     font-size: 15px;
-
-}
-.gridButton{
-    margin-left: 120px;
+  }
+  .gridButton {
+    margin-left: 77px;
     border: solid 1px;
     border-radius: 5px;
     color: grey;
     background-color: black;
-}
+    padding: 5px;
+  }
+  .innerDiv{
+    width:100%;
+  }
 .gridButton a:hover{
     background-color: aliceblue;
     color: #000;
 }
+
 }
