--- a/css/HeaderAndFooter.css
+++ b/css/HeaderAndFooter.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(150, 113, 187);
+  background-color: rgb(246, 245, 247);
 }
 /* header or nav bar for all pages contain logo, title and 5 anchor tags to navigate between the pages*/
 #headerDiv{
@@ -9,6 +9,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
+    border: #000 solid;
   }
   #headerDiv img{
     height: 100px;
@@ -28,12 +29,12 @@ body{
   }
   
   #headerDiv a{
-    color: #898181;
+    color: black;
     font-size: 20px;
     margin-left: 15px;
     margin-top: 40px;
     text-decoration: none;
-    background-color: #000;
+    background-color: rgb(246, 245, 247);
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
@@ -54,6 +55,7 @@ body{
     position:fixed;
      bottom: 0;
      left: 0;
+    border: #000 solid; 
   }
   #footerDiv p{
     color:#000;
@@ -63,8 +65,8 @@ body{
     text-align: center;
   }
   #linkDiv a:hover{
-    background-color: aliceblue;
-    color: #000;
+    background-color: rgb(189, 203, 225);
+    color: rgb(12, 11, 12);
   }
 /* tablet view */
 @media only screen and (max-width:1024px){
@@ -102,6 +104,8 @@ body{
   display: inline-block;
   width: 60px;
   height: 34px;
+  margin-left: 15px;
+  float: right;
 }
 
 .switch input { 
