--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,7 @@
     border-radius: 5px;
     color: grey;
     background-color: black;
+    padding: 5px;
   }
 .gridButton a:hover{
     background-color: aliceblue;
