--- a/css/HeaderAndFooter.css
+++ b/css/HeaderAndFooter.css
@@ -9,7 +9,7 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    border: #000 solid;
+    border:2px solid burlywood ;
   }
   #headerDiv img{
     height: 100px;
@@ -36,7 +36,7 @@ body{
     text-decoration: none;
     background-color: rgb(246, 245, 247);
     padding: 5px;
-    border: 1px solid black;
+    border: 2px solid burlywood;
     border-radius: 5px;
    
     
@@ -55,7 +55,7 @@ body{
     position:fixed;
      bottom: 0;
      left: 0;
-    border: #000 solid; 
+    border: burlywood solid; 
   }
   #footerDiv p{
     color:#000;
@@ -80,6 +80,31 @@ body{
      margin-top: 4% ;
   }
 }
+
+@media only screen and (max-width:824px){
+  #headerDiv h1 {
+    font-size: 23px;
+    margin-left: 23px;
+    margin-top: 29px;
+  }
+  #headerDiv {
+    background-color: rgb(153, 146, 160);
+    height: 83px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 2px solid burlywood;
+
+  }
+  #headerDiv img {
+    height: 83px;
+    width: 78px;
+    float: left;
+  }
+
+
+}
 /* mobile view */
 @media only screen and (max-width:600px){
   #linkDiv{
@@ -97,6 +122,37 @@ body{
   #headerDiv h1{
     font-size: 30px;
   }
+  .gridButton {
+    margin-left: 61px;
+    border: solid 1px;
+    border-radius: 5px;
+    color: grey;
+    background-color: black;
+    padding: 5px;
+  }
+  .gridP {
+  text-align: center;
+  margin-left: 16px;
+  font-size: 13px;
+}
+.gridImg {
+  width: 70px;
+  height: 72px;
+  margin-left: 8px;
+  float: left;
+}
+.gridDiv {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  margin-right: -3px;
+  margin-top: 130px;
+  margin-bottom: 100px;
+  background-color: rgb(104, 104, 125);
+  width: 100%;
+  height: 558px;
+  grid-gap: 10px;
+  float: right;
+}
 }
 
 .switch {
