--- a/css/index.css
+++ b/css/index.css
@@ -86,3 +86,46 @@
 }
 
 }
+
+@media only screen and (max-width:600px){
+  .gridDiv {
+    display: grid;
+    grid-template-columns: 220px 150px;
+    margin-right: 29px;
+    margin-top: 130px;
+    margin-bottom: 100px;
+    background-color: rgb(104, 104, 125);
+    width: 100%;
+    height: 664px;
+    grid-gap: 10px;
+    float: right;
+}
+.gridP {
+  text-align: center;
+  margin-left: 50px;
+  font-size: 15px;
+}
+.gridButton {
+  margin-left: 61px;
+  border: solid 1px;
+  border-radius: 5px;
+  color: grey;
+  background-color: black;
+  padding: 5px;
+}
+}
+@media only screen and (max-width:400px)
+{
+  .gridDiv {
+    display: grid;
+    grid-template-columns: 190px 150px;
+    margin-right: 81px;
+    margin-top: 130px;
+    margin-bottom: 100px;
+    background-color: rgb(104, 104, 125);
+    width: 80%;
+    height: 664px;
+    grid-gap: 10px;
+    float: right;
+}
+}
