--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,24 @@
+
 .gridDiv{
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
-    margin-left: 100px;
-    margin-right: 100px;
     margin-top: 130px;
-    margin-bottom: 100px;
-    background-color:rgb(104, 104, 125) ;
-    width: 80%;
-    /* height: 450px; */
-    grid-gap: 10px;
-    float:right;
-    padding-bottom: 18px;
-    border: 5px solid burlywood;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    background-color: rgb(104, 104, 125);
+    padding: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 80px;
+  
 }
+.innerDiv{
+  width:auto;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
 
 .gridImg {
     width: 100px;
@@ -41,22 +47,9 @@
 
 @media only screen and (max-width:1000px){
 
-   body{
-    background-color: black;
-   }
-   .gridDiv {
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
-    margin-right: 56px;
-    margin-top: 130px;
-    margin-bottom: 100px;
-    background-color: rgb(104, 104, 125);
-    width: 86%;
-    height: 413px;
-    grid-gap: 10px;
-    float: right;
-  }
-
+   
+ 
+ 
   .gridImg {
     width: 100px;
     height: 100px;
@@ -77,9 +70,7 @@
     background-color: black;
     padding: 5px;
   }
-  .innerDiv{
-    width:100%;
-  }
+  
 .gridButton a:hover{
     background-color: aliceblue;
     color: #000;
@@ -88,17 +79,14 @@
 }
 
 @media only screen and (max-width:600px){
-  .gridDiv {
-    display: grid;
-    grid-template-columns: 220px 150px;
-    margin-right: 29px;
-    margin-top: 130px;
-    margin-bottom: 100px;
-    background-color: rgb(104, 104, 125);
-    width: 100%;
-    height: 664px;
-    grid-gap: 10px;
-    float: right;
+  
+.gridDiv{
+  grid-template-columns: auto auto;
+}
+.gridImg{
+  padding-left:50px;
+  padding-right: 50px;
+  padding-bottom: 20px;
 }
 .gridP {
   text-align: center;
@@ -114,6 +102,7 @@
   padding: 5px;
 }
 }
+/* }
 @media only screen and (max-width:400px)
 {
   .gridDiv {
@@ -128,4 +117,4 @@
     grid-gap: 10px;
     float: right;
 }
-}
+} */
