--- a/css/index.css
+++ b/css/index.css
@@ -24,16 +24,16 @@
     width: 100px;
     height: 100px;
     padding: 20px 50px 20px;
-    margin-left: 92px;
+    margin-left: 30px;
     float: left;
   }
 .gridP{
     text-align: center;
-    margin-left: 85px;
+    margin-left: 40px;
 
 }
 .gridButton {
-    margin-left: 146px;
+    margin-left: 30px;
     border: solid 1px;
     border-radius: 5px;
     color: grey;
@@ -48,14 +48,35 @@
 @media only screen and (max-width:1000px){
 
    
- 
+  .gridDiv{
+    margin-top: 130px;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    background-color: rgb(104, 104, 125);
+    padding: 10px;
+    margin-left: 50px;
+    margin-bottom: 80px;
+    margin-right: 50px;
+    width: 80%;
+  
+}
+.innerDiv{
+  width:70%; 
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  margin-left: 20px;
+}
  
   .gridImg {
     width: 100px;
     height: 100px;
-    padding: 20px 50px 20px;
-    margin-left: 15px;
-    float: left;
+    padding: 50px 20px;
+    margin-left: 0px;
+    margin-right: 20px;
+    /* float: left; */
   }
   .gridP {
     text-align: center;
@@ -63,7 +84,59 @@
     font-size: 15px;
   }
   .gridButton {
-    margin-left: 77px;
+    margin-left: 20px;
+    border: solid 1px;
+    border-radius: 5px;
+    color: grey;
+    background-color: black;
+    padding: 5px;
+  }
+  
+.gridButton a:hover{
+    background-color: aliceblue;
+    color: #000;
+}
+
+}
+@media only screen and (max-width:800px){
+
+   
+  .gridDiv{
+    margin-top: 130px;
+    display: inline-grid;
+    grid-template-columns: 200px 200px 200px;
+    background-color: rgb(104, 104, 125);
+    padding: 10px;
+    margin-left: 50px;
+    margin-bottom: 80px;
+    margin-right: 50px;
+    width: 600px;
+  
+}
+.innerDiv{
+  /* width:80%; */
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+ 
+  .gridImg {
+    width: 100px;
+    height: 100px;
+    padding: 50px 20px;
+    margin-left: 0px;
+    margin-right: 20px;
+    /* float: left; */
+  }
+  .gridP {
+    text-align: center;
+    margin-left: 8px;
+    font-size: 15px;
+  }
+  .gridButton {
+    margin-left: 20px;
     border: solid 1px;
     border-radius: 5px;
     color: grey;
@@ -118,3 +191,24 @@
     float: right;
 }
 } */
+@media only screen and (max-width:500px){
+  .innerDiv{
+    width: 150px;
+  }
+  .gridDiv{
+    width: 400px;
+    height: 790px;
+    margin-bottom: 50px;
+  }
+  .gridImg {
+    padding-left: 14px;
+    width: 90px;
+    height: 88px;
+  }
+  .gridP{
+    margin-left: 14px;
+  }
+  gridButton {
+    margin-left: 17px;
+  }
+}
